# python-project-49

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
brain_games/: brain_prime.py  brain_progression.py  cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_engine.py  game_utils.py
