[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "make>=0.1.6.post2",
    "prompt>=0.4.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[project.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.brain_even:main"
brain_calc = "brain-games.scripts.brain_calc:main"
brain_gcd = "brain-games.scripts.brain_gcd:main"
brain_progression = "brain-games.scripts.brain_progression:main"
brain_prime = "brain-games.scripts.brain_prime:main"
